applied a patch from David Johnson minor code quality improvements after using FindBugs