@@ -151,10 +151,10 @@ public class AuthTokenInfoDialog extends IconAndMessageDialog {
         int minutes = ( int )( ( lifetime % 3600 ) / 60 );
         int seconds = ( int )( lifetime % 60 );
         String ltString = String.format( " (%1$dd %2$2dh %3$2dm %4$2ds)", //$NON-NLS-1$
-                                         new Integer( days ),
-                                         new Integer( hours ),
-                                         new Integer( minutes ),
-                                         new Integer(seconds ) );
+                                         Integer.valueOf( days ),
+                                         Integer.valueOf( hours ),
+                                         Integer.valueOf( minutes ),
+                                         Integer.valueOf(seconds ) );
         expText.setText( bf.toString()+ltString );
       }
     }
